# routes/cources.js
@@ -1,5 +1,6 @@
 const {models} = require('../services/database/db');
 const {body, validationResult} = require('express-validator/check');
+const crypto = require("crypto");
 
 const router = require('express').Router();
 
@@ -8,9 +9,37 @@ router.get('/', (req, res) => {
     models.Course
         .findAll({
             where: {ownerId: req.user.id},
-            raw: true
+            include: [
+                {
+                    model: models.CourseToken
+                },
+                {
+                    model: models.User,
+                    as: 'Members',
+                    attributes: ['id', 'name', 'email'],
+                }
+            ]
         })
-        .then(courses => res.json(courses))
+        .then(ownCourses => models.Course
+            .findAll({
+                include: [
+                    {
+                        model: models.User,
+                        as: 'Members',
+                        attributes: [],
+                        where: {
+                            id: req.user.id
+                        }
+                    }
+                ]
+            })
+            .then(memberCourses =>
+                res.json({
+                    ownCourses,
+                    memberCourses
+                })
+            )
+        )
         .catch(error => {
             console.error(error);
             res.status(500).json({errors: ['Please ty again. Internal server error.']});
@@ -109,6 +138,121 @@ router.delete('/',
                 } else {
                     throw {code: 403, errors: ['You can only delete your own course.']};
                 }
+            })
+            .catch(error => {
+                console.error(error);
+                if (!error || !error.code || error.code === 500)
+                    res.status(500).json({errors: ['Please ty again. Internal server error.']});
+                else
+                    res.status(error.code).json({errors: error.errors});
+            });
+    });
+
+// Generate Token for course
+router.post('/generateToken',
+    [
+        body('id').isNumeric().not().isEmpty().withMessage('id can not be empty.')
+    ],
+    (req, res) => {
+        const errors = validationResult(req);
+        if (!errors.isEmpty()) {
+            return res.status(400).json({errors: errors.array()});
+        }
+
+        models.Course
+            .findByPk(req.body.id)
+            .then(course => {
+                if (!course) {
+                    throw {code: 404, errors: ['Couldn\'t find a course with the id.']};
+                }
+
+                if (course.ownerId === req.user.id) {
+                    const randomToken = crypto.randomBytes(20).toString('hex').substr(0, 10);
+                    return models.CourseToken
+                        .create({enabled: true, token: randomToken, courseId: course.id})
+                        .then(couresToken => res.json(couresToken));
+                } else {
+                    throw {code: 403, errors: ['You can only create tokens for your own course.']};
+                }
+            })
+            .catch(error => {
+                console.error(error);
+                if (!error || !error.code || error.code === 500)
+                    res.status(500).json({errors: ['Please ty again. Internal server error.']});
+                else
+                    res.status(error.code).json({errors: error.errors});
+            });
+    });
+
+// Join Course
+router.post('/join',
+    [
+        body('courseId').isNumeric().not().isEmpty().withMessage('courseId can not be empty.'),
+        body('token').not().isEmpty().withMessage('token can not be empty.')
+    ],
+    (req, res) => {
+        const errors = validationResult(req);
+        if (!errors.isEmpty()) {
+            return res.status(400).json({errors: errors.array()});
+        }
+
+        models.Course
+            .findByPk(req.body.courseId, {
+                include: [{
+                    model: models.CourseToken,
+                    where: {
+                        token: req.body.token,
+                        enabled: true
+                    }
+                }]
+            })
+            .then(course => {
+                if (!course)
+                    throw {code: 404, errors: ['Couldn\'t find a course with the token.']};
+
+                return course
+                    .addMember(req.user.id)
+                    .then(() => res.json({}));
+            })
+            .catch(error => {
+                console.error(error);
+                if (!error || !error.code || error.code === 500)
+                    res.status(500).json({errors: ['Please ty again. Internal server error.']});
+                else
+                    res.status(error.code).json({errors: error.errors});
+            });
+    });
+
+// Leave course
+router.delete('/leave',
+    [
+        body('id').isNumeric().not().isEmpty().withMessage('id can not be empty.'),],
+    (req, res) => {
+        const errors = validationResult(req);
+        if (!errors.isEmpty()) {
+            return res.status(400).json({errors: errors.array()});
+        }
+
+        models.Course
+            .findByPk(req.body.id, {
+                include: [
+                    {
+                        model: models.User,
+                        as: 'Members',
+                        attributes: [],
+                        where: {
+                            id: req.user.id
+                        }
+                    }
+                ]
+            })
+            .then(course => {
+                if (!course)
+                    throw {code: 404, errors: ['Couldn\'t find a course.']};
+
+                return course
+                    .removeMember(req.user.id)
+                    .then(() => res.json({}));
             })
             .catch(error => {
                 console.error(error);
